compiler/tools/fpp-check/test/container/missing_ports.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/container/missing_ports.fpp:1.1
passive component C {
^
error: component with data product specifiers must have product get port or product request port
